// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-ts-loader > should insert babel plugin correctly in some edge case 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "include": [
      {
        "and": [
          "",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:js\\|mjs\\|cjs\\|jsx\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "babelrc": false,
          "compact": true,
          "configFile": false,
          "plugins": [
            [
              "babel-plugin-xxx",
            ],
            [
              "babel-plugin-import",
              {
                "libraryDirectory": "es",
                "libraryName": "xxx-components",
                "style": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
              {
                "displayName": true,
                "pure": true,
                "ssr": false,
                "transpileTemplateLiterals": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.37",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "include": [
                  "@babel/plugin-transform-class-properties",
                ],
                "modules": false,
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": false,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
    ],
  },
]
`;

exports[`plugin-ts-loader > should insert babel plugin correctly in some edge case 2`] = `
[
  {
    "include": [
      {
        "and": [
          "",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:ts\\|mts\\|cts\\|tsx\\)\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "plugins": [
            [
              "babel-plugin-xxx",
            ],
            [
              "babel-plugin-import",
              {
                "libraryDirectory": "es",
                "libraryName": "xxx-components",
                "style": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.37",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "modules": false,
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": false,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/ts-loader/index.js",
        "options": {
          "allowTsInNodeModules": true,
          "compilerOptions": {
            "module": "esnext",
            "target": "esnext",
          },
          "transpileOnly": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-ts-loader > should set include/exclude 1`] = `
[
  {
    "exclude": [
      "src/**/*.js",
    ],
    "include": [
      {
        "and": [
          "",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      "src/**/*.ts",
    ],
    "test": /\\\\\\.\\(\\?:ts\\|mts\\|cts\\|tsx\\)\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "plugins": [
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "useESModules": true,
                "version": "7.24.7",
              },
            ],
            "<WORKSPACE>/packages/cli/babel-preset/src/pluginLockCorejsVersion.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
              {
                "skipEnvCheck": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.37",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "modules": "commonjs",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/ts-loader/index.js",
        "options": {
          "allowTsInNodeModules": true,
          "compilerOptions": {
            "module": "esnext",
            "target": "esnext",
          },
          "transpileOnly": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-ts-loader > should set ts-loader 1`] = `
[
  {
    "include": [
      {
        "and": [
          "",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:ts\\|mts\\|cts\\|tsx\\)\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "plugins": [
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "useESModules": true,
                "version": "7.24.7",
              },
            ],
            "<WORKSPACE>/packages/cli/babel-preset/src/pluginLockCorejsVersion.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
              {
                "skipEnvCheck": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.37",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "modules": "commonjs",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/ts-loader/index.js",
        "options": {
          "allowTsInNodeModules": true,
          "compilerOptions": {
            "module": "esnext",
            "target": "esnext",
          },
          "transpileOnly": true,
        },
      },
    ],
  },
]
`;
